--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>Norman Borlaug</title>
 </head>
 <body>
-	<div class="container border rounded bg-light">
+	<div class="container-fluid col-7 border rounded bg-light">
 		<div class="row justify-content-center">
 			<div class="col clearfix justify-content-center text-center">
 				<h1 class="text-center">Dr. Norman Borlaug</h1>
-				<h2 class="text-center">The man who saved a billion lives</h2>
+				<h2 class="text-center"><em>The man who saved a billion lives</em></h2>
 				<figure class="figure border rounded bg-white text-center <!-- img-thumbnail -->">
 					<img class="figure-img img-fluid" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="people on the field">
 					<figcaption class="figure-caption text-center">
@@ -83,54 +83,25 @@
 		        				"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."
 		     				</p>
 	     				</blockquote>
-	      			<p class="cite">
-	        			-Indian Prime Minister Manmohan Singh
+	      			<p class="blockquote-footer">
+	        			<em>Indian Prime Minister Manmohan Singh</em>
 	      			</p>
 	      			<p>
-	      				If you have time, you should read more about this incredible human being on his Wikipedia entry.
+	      				If you have time, you should read more about this incredible human being on his <a target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry</a>.
 	      			</p>
 	      			</div>
 	      		</div>
 			</div>
 		</div>
+		
 	</div>
-	<p class="text-center">Written and coded by Alexander Prypyshnyi.</p>
-
-
-
-
-
-
-	<!--     <h1>Hello? world!</h1>
-
-	    <div class="container-fluidwell">
-	<article class="jumbotron">
-	<div class=" row col-xs-12">
-	  <h1>Dr. Norman Borlaug</h1>
-	  <h2>The man who saved a billion lives</h2>
-	  <figure class="photo">
-	    <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="people" class="img-responsive">
-	    <figcaption>Dr. Norman Borlaug, third from left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
-	  </figure>
-	  <h3>Here's a time line of Dr. Borlaug's life:</h3>
-	 
-	    <div>
-	      <p class="epilogue">
-	        "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."
-	      </p>
-	      <p class="cite">
-	        Indian Prime Minister Manmohan Singh
-	      </p
-	    </div>
-	        <p>
-	          If you have time, you should read more about this incredible human being on his Wikipedia entry.
-	        </p>
-	  </ul>
-	 Coded by Alexandr Prypyshnyi.
+	<div class="row justify-content-center">
+		<div class="col col-7 clearfix justify-content-center text-center">
+			<hr>
+			<p class="text-center">Written and coded by <a target="_blank" href="https://www.freecodecamp.org/alexpryp">Alexander Prypyshnyi</a>.</p>
+		</div>
 	</div>
-	</article>
-	</div>
- -->
+
 
 
 
