--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
 		</div>
 		
 	</div>
-	<div class="row justify-content-center">
-		<div class="col col-7 clearfix justify-content-center text-center">
-			<hr>
-			<p class="text-center">Written and coded by <a target="_blank" href="https://www.freecodecamp.org/alexpryp">Alexander Prypyshnyi</a>.</p>
+	<div class="container-fluid col-7">
+		<div class="row justify-content-center">
+			<div class="col clearfix justify-content-center text-center">
+				<hr>
+				<p class="text-center">Written and coded by <a target="_blank" href="https://www.freecodecamp.org/alexpryp">Alexander Prypyshnyi</a>.</p>
+			</div>
 		</div>
 	</div>
 
