--- a/index.html
+++ b/index.html
@@ -2,115 +2,87 @@
 
 <html lang = "ru">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="style.css">
-
     <title>Norman Borlaug</title>
 </head>
-<body>
-	<div class="container-fluid col-7 border rounded bg-light">
-		<div class="row justify-content-center">
-			<div class="col clearfix justify-content-center text-center">
-				<h1 class="text-center">Dr. Norman Borlaug</h1>
-				<h2 class="text-center"><em>The man who saved a billion lives</em></h2>
-				<figure class="figure border rounded bg-white text-center <!-- img-thumbnail -->">
-					<img class="figure-img img-fluid" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="people on the field">
-					<figcaption class="figure-caption text-center">
-						Dr. Norman Borlaug, third from left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
-					</figcaption>
-				</figure>
-				<div class="time-line container col-8 text-left">
-					<h3 class="text-center">Here's a time line of Dr. Borlaug's life:</h3>
-					  <ul>
-					    <li>
-					      <strong>1914</strong> - Born in Cresco, Iowa
-					    </li>
-					    <li>
-					      <strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"
-					    </li>
-					    <li>
-					      <strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."
-					    </li>
-					    <li>
-					      <strong>1937</strong> - Finishes university and takes a job in the US Forestry Service
-					    </li>
-					    <li>
-					      <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
-					    </li>
-					    <li>
-					      <strong>1941</strong> - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disenfectants, and other applied science.
-					    </li>
-					    <li>
-					      <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
-					    </li>
-					    <li>
-					      <strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.
-					    </li>
-					    <li>
-					      <strong>1945</strong> - Discovers a way to grown wheat twice each season, doubling wheat yields
-					    </li>
-					    <li>
-					      <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertalizer. It goes on to provide 95% of Mexico's wheat.
-					    </li>
-					    <li>
-					      <strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population
-					    </li>
-					    <li>
-					      <strong>1970</strong> - receives the Nobel Peace Prize
-					    </li>
-					    <li>
-					      <strong>1983</strong> - helps seven African countries dramatically increase their maize and sorghum yields
-					    </li>
-					    <li>
-					      <strong>1984</strong> - becomes a distinguished professor at Texas A&M University
-					    </li>
-					    <li>
-					      <b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."
-					    </li>
-					    <li>
-					      <strong>2009</strong> - dies at the age of 95.
-					    </li>
-					</ul>
-	    			<div>
-	    				<blockquote>
-		      				<p class="epilogue">
-		        				"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."
-		     				</p>
-	     				</blockquote>
-	      			<p class="blockquote-footer">
-	        			<em>Indian Prime Minister Manmohan Singh</em>
-	      			</p>
-	      			<p>
-	      				If you have time, you should read more about this incredible human being on his <a target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry</a>.
-	      			</p>
-	      			</div>
-	      		</div>
+<body>	
+	<div id="main">
+		<h1 id="title">Dr. Norman Borlaug</h1>
+		<p>The man who saved a billion lives</p>
+		<div id="img-div">
+			<img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="people on the field">
+			<div id="img-caption">
+				Dr. Norman Borlaug, third from left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
 			</div>
 		</div>
-		
+		<div id="tribute-info">
+			<h3>Here's a time line of Dr. Borlaug's life:</h3>
+			  <ul>
+			    <li>
+			      <strong>1914</strong> - Born in Cresco, Iowa
+			    </li>
+			    <li>
+			      <strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"
+			    </li>
+			    <li>
+			      <strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."
+			    </li>
+			    <li>
+			      <strong>1937</strong> - Finishes university and takes a job in the US Forestry Service
+			    </li>
+			    <li>
+			      <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
+			    </li>
+			    <li>
+			      <strong>1941</strong> - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disenfectants, and other applied science.
+			    </li>
+			    <li>
+			      <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
+			    </li>
+			    <li>
+			      <strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.
+			    </li>
+			    <li>
+			      <strong>1945</strong> - Discovers a way to grown wheat twice each season, doubling wheat yields
+			    </li>
+			    <li>
+			      <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertalizer. It goes on to provide 95% of Mexico's wheat.
+			    </li>
+			    <li>
+			      <strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population
+			    </li>
+			    <li>
+			      <strong>1970</strong> - receives the Nobel Peace Prize
+			    </li>
+			    <li>
+			      <strong>1983</strong> - helps seven African countries dramatically increase their maize and sorghum yields
+			    </li>
+			    <li>
+			      <strong>1984</strong> - becomes a distinguished professor at Texas A&M University
+			    </li>
+			    <li>
+			      <b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."
+			    </li>
+			    <li>
+			      <strong>2009</strong> - dies at the age of 95.
+			    </li>
+			</ul>
+			<div>
+				<blockquote>
+      				<p>
+        				<em>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</em>
+     				</p>
+ 				</blockquote>
+  			<p>
+    			<em>Indian Prime Minister Manmohan Singh</em>
+  			</p>
+  			<h3>
+  				If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry</a>.
+  			</h3>
+  			</div>
+  		</div>
 	</div>
-	<div class="container-fluid col-7">
-		<div class="row justify-content-center">
-			<div class="col clearfix justify-content-center text-center">
-				<hr>
-				<p class="text-center">Written and coded by <a target="_blank" href="https://www.freecodecamp.org/alexpryp">Alexander Prypyshnyi</a>.</p>
-			</div>
-		</div>
-	</div>
-
-
-
-
-	    <!-- Optional JavaScript -->
-	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
